idf_component_register(SRCS "bt_app_av.cpp"
                            "bt_app_core.cpp"
                            "pulseSensorArduino.cpp"
                            "PulseSensorPlayground.cpp"
                            "utility/PulseSensor.cpp"
                            "utility/PulseSensorSerialOutput.cpp"
                            "utility/PulseSensorTimingStatistics.cpp"
                            "main.cpp"
                    INCLUDE_DIRS ".")
